--- a/package.json
+++ b/package.json
@@ -18,11 +18,12 @@
     "memdown": "^1.1.1",
     "standard": "^5.4.1",
     "tap": "^5.1.1",
-    "tape": "^4.4.0"
+    "tape": "^4.4.0",
+    "webcoin-bitcoin": "0.0.1"
   },
   "dependencies": {
     "async": "^1.5.2",
-    "bitcoin-util": "0.0.1",
+    "bitcoin-util": "^2.0.0",
     "bitcore-lib": "^0.13.11",
     "browserify-buffertools": "^1.0.2",
     "buffertools": "^2.1.3",
