--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "blockchain-spv",
   "version": "0.0.1",
-  "description": "Stores Bitcoin block headers and verifies transactions with SPV",
+  "description": "Stores blockchain headers and verifies transactions with SPV",
   "main": "index.js",
   "scripts": {
     "test": "standard && tap test/*.js --cov"
@@ -15,6 +15,7 @@
   "author": "Matt Bell <mappum@gmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "levelup": "^1.3.1",
     "memdown": "^1.1.1",
     "standard": "^5.4.1",
     "tap": "^5.1.1",
