--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "blockchain-spv",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "Stores blockchain headers and verifies transactions with SPV",
   "main": "index.js",
   "scripts": {
@@ -14,23 +14,20 @@
   ],
   "author": "Matt Bell <mappum@gmail.com>",
   "license": "MIT",
+  "dependencies": {
+    "async": "^1.5.2",
+    "bitcoin-util": "^2.0.0",
+    "bitcore-lib": "^0.13.11",
+    "browserify-buffertools": "^1.0.2",
+    "buffertools": "^2.1.3"
+  },
   "devDependencies": {
     "levelup": "^1.3.1",
     "memdown": "^1.1.1",
     "standard": "^5.4.1",
     "tap": "^5.1.1",
     "tape": "^4.4.0",
-    "webcoin-bitcoin": "0.0.1"
-  },
-  "dependencies": {
-    "async": "^1.5.2",
-    "bitcoin-util": "^2.0.0",
-    "bitcore-lib": "^0.13.11",
-    "browserify-buffertools": "^1.0.2",
-    "buffertools": "^2.1.3",
-    "hat": "0.0.3",
-    "levelup": "^1.3.1",
-    "webcoin-bitcoin": "0.0.1"
+    "webcoin-bitcoin": "^0.1.0"
   },
   "browser": {
     "buffertools": "browserify-buffertools"
