--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "standard": "^5.4.1",
     "tap": "^5.1.1",
     "tape": "^4.4.0",
-    "webcoin-bitcoin": "0.0.1"
+    "webcoin-bitcoin": "^0.1.0"
   },
   "dependencies": {
     "async": "^1.5.2",
@@ -28,8 +28,6 @@
     "bitcore-lib": "^0.13.11",
     "browserify-buffertools": "^1.0.2",
     "buffertools": "^2.1.3",
-    "hat": "0.0.3",
-    "levelup": "^1.3.1",
     "webcoin-bitcoin": "0.0.1"
   },
   "browser": {
