--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "dependencies": {
     "async": "^1.5.2",
     "bitcoin-util": "^2.0.0",
-    "bitcore-lib": "^0.13.11",
+    "bitcoinjs-lib": "^2.2.0",
     "browserify-buffertools": "^1.0.2",
     "buffertools": "^2.1.3"
   },
