--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "bitcoin-util": "^2.0.0",
     "bitcoinjs-lib": "^2.2.0",
     "browserify-buffertools": "^1.0.2",
-    "buffertools": "^2.1.3"
+    "buffertools": "^2.1.3",
+    "setimmediate": "^1.0.4"
   },
   "devDependencies": {
     "levelup": "^1.3.1",
