--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "bitcoinjs-lib": "^2.2.0",
     "browserify-buffertools": "^1.0.2",
     "buffertools": "^2.1.3",
+    "flush-write-stream": "^1.0.0",
     "setimmediate": "^1.0.4"
   },
   "devDependencies": {
