--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "async": "^1.5.2",
     "bitcoin-util": "^2.0.0",
     "bitcoinjs-lib": "^2.2.0",
-    "browserify-buffertools": "^1.0.2",
-    "buffertools": "^2.1.3",
+    "buffer-reverse": "^1.0.1",
+    "inherits": "^2.0.1",
     "flush-write-stream": "^1.0.0",
     "setimmediate": "^1.0.4"
   },
@@ -30,11 +30,5 @@
     "tap": "^5.1.1",
     "tape": "^4.4.0",
     "webcoin-bitcoin": "^2.0.0"
-  },
-  "browser": {
-    "buffertools": "browserify-buffertools"
-  },
-  "optionalDependencies": {
-    "buffertools": "^2.1.3"
   }
 }
