--- a/.travis.yml
+++ b/.travis.yml
@@ -1,24 +1,14 @@
+sudo: false
 language: node_js
-
 node_js:
-- '5'
-
-compiler: clang-3.6
-
+  - "4"
+  - "5"
+matrix:
+  include:
+    - node_js: "4"
+      env: TEST_SUITE=lint
 env:
-  global:
-  - CXX=clang-3.6
-
-addons:
-  apt:
-    sources:
-    - llvm-toolchain-precise-3.6
-    - ubuntu-toolchain-r-test
-    packages:
-    - clang-3.6
-    - g++-4.8
-
+  - TEST_SUITE=unit
 notifications:
   email: false
-
-sudo: false
+script: npm run-script $TEST_SUITE
