--- a/package.json
+++ b/package.json
@@ -21,9 +21,10 @@
     "bitcoin-util": "^2.0.0",
     "bitcoinjs-lib": "^2.2.0",
     "buffer-reverse": "^1.0.1",
-    "inherits": "^2.0.1",
     "flush-write-stream": "^1.0.0",
-    "setimmediate": "^1.0.4"
+    "inherits": "^2.0.1",
+    "setimmediate": "^1.0.4",
+    "varstruct": "^5.1.0"
   },
   "devDependencies": {
     "levelup": "^1.3.1",
