Blockchain: added createReadStream method

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "bitcoinjs-lib": "^2.2.0",
     "buffer-reverse": "^1.0.1",
     "flush-write-stream": "^1.0.0",
+    "from2": "^2.1.1",
     "inherits": "^2.0.1",
     "setimmediate": "^1.0.4",
     "varstruct": "^5.1.0"
