--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
   "scripts": {
     "lint": "standard",
     "test": "npm run lint && npm run unit",
-    "unit": "tap test/*.js --cov"
+    "unit": "tap test/*.js --cov",
+    "build": "rm -rf lib && babel --presets es2015 src -d lib",
+    "source": "rm -rf lib && ln -s src lib",
+    "prepublish": "npm run build",
+    "publish": "npm run source"
   },
   "keywords": [
     "bitcoin",
@@ -27,6 +31,8 @@
     "varstruct": "^5.1.0"
   },
   "devDependencies": {
+    "babel-cli": "^6.6.5",
+    "babel-preset-es2015": "^6.6.0",
     "levelup": "^1.3.1",
     "memdown": "^1.1.1",
     "standard": "^6.0.4",
