--- a/package.json
+++ b/package.json
@@ -4,9 +4,7 @@
   "description": "Stores blockchain headers and verifies transactions with SPV",
   "main": "index.js",
   "scripts": {
-    "lint": "standard src test",
-    "test": "npm run lint && npm run unit",
-    "unit": "tap test/*.js --cov",
+    "test": "standard src test && nyc tape test/*.js | faucet && nyc report",
     "build": "rm -rf lib && babel --presets es2015 src -d lib",
     "source": "rm -rf lib && ln -s src lib",
     "prepublish": "npm run build",
@@ -35,10 +33,11 @@
   "devDependencies": {
     "babel-cli": "^6.6.5",
     "babel-preset-es2015": "^6.6.0",
+    "faucet": "0.0.1",
     "levelup": "^1.3.1",
     "memdown": "^1.1.1",
+    "nyc": "^6.4.4",
     "standard": "^7.0.0",
-    "tap": "^5.1.1",
     "tape": "^4.4.0",
     "webcoin-bitcoin": "^2.0.0"
   },
