--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "flush-write-stream": "^1.0.0",
     "from2": "^2.1.1",
     "inherits": "^2.0.1",
+    "object-assign": "^4.1.0",
     "setimmediate": "^1.0.4",
     "varstruct": "^5.1.0",
     "varuint-bitcoin": "^1.0.4"
