--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "devDependencies": {
     "babel-cli": "^6.6.5",
     "babel-preset-es2015": "^6.6.0",
+    "event-cleanup": "^1.0.3",
     "faucet": "0.0.1",
     "levelup": "^1.3.1",
     "memdown": "^1.1.1",
