--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
   "license": "MIT",
   "dependencies": {
     "async": "^1.5.2",
+    "bitcoin-protocol": "^3.0.1",
     "bitcoin-util": "^2.0.0",
     "bitcoinjs-lib": "^2.2.0",
+    "bn.js": "^4.11.8",
     "buffer-reverse": "^1.0.1",
     "flush-write-stream": "^1.0.0",
     "from2": "^2.1.1",
