--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Stores blockchain headers and verifies transactions with SPV",
   "main": "index.js",
   "scripts": {
-    "test": "standard src/*.js test/*.js && nyc tape test/*.js | faucet && nyc report",
+    "test": "depcheck && standard src/*.js test/*.js && nyc tape test/*.js | faucet && nyc report",
     "test-browser": "npm run build && test/browser.sh && npm run source",
     "build": "rm -rf lib && babel --presets es2015 src -d lib",
     "source": "rm -rf lib && ln -s src lib",
@@ -26,6 +26,7 @@
     "bitcoinjs-lib": "^2.2.0",
     "bn.js": "^4.11.8",
     "buffer-reverse": "^1.0.1",
+    "depcheck": "^0.6.9",
     "flush-write-stream": "^1.0.0",
     "from2": "^2.1.1",
     "inherits": "^2.0.1",
