--- a/package.json
+++ b/package.json
@@ -20,30 +20,21 @@
   "author": "Matt Bell <mappum@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "async": "^1.5.2",
     "bitcoin-protocol": "^3.0.1",
     "bitcoin-util": "^2.0.0",
     "bitcoinjs-lib": "^2.2.0",
     "bn.js": "^4.11.8",
     "buffer-reverse": "^1.0.1",
+    "create-hash": "^1.2.0",
     "depcheck": "^0.6.9",
-    "flush-write-stream": "^1.0.0",
-    "from2": "^2.1.1",
-    "inherits": "^2.0.1",
-    "level-transactions": "^1.5.3",
     "map-deque": "0.0.2",
     "object-assign": "^4.1.0",
-    "setimmediate": "^1.0.4",
-    "varstruct": "^5.1.0",
-    "varuint-bitcoin": "^1.0.4"
+    "old": "^0.2.0"
   },
   "devDependencies": {
     "babel-cli": "^6.6.5",
     "babel-preset-es2015": "^6.6.0",
-    "event-cleanup": "^1.0.3",
     "faucet": "0.0.1",
-    "levelup": "^1.3.1",
-    "memdown": "^1.1.1",
     "nyc": "^6.4.4",
     "standard": "^7.0.0",
     "tape": "^4.4.0",
