--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Stores blockchain headers and verifies transactions with SPV",
   "main": "index.js",
   "scripts": {
-    "test": "depcheck && standard src/*.js test/*.js && nyc tape test/*.js | faucet && nyc report",
+    "test": "depcheck --ignores=babel-preset-es2015,zuul,zuul-ngrok && standard src/*.js test/*.js && nyc tape test/*.js | faucet && nyc report",
     "test-browser": "npm run build && test/browser.sh && npm run source",
     "build": "rm -rf lib && babel --presets es2015 src -d lib",
     "source": "rm -rf lib && ln -s src lib",
@@ -22,7 +22,6 @@
   "dependencies": {
     "bitcoin-protocol": "^3.0.1",
     "bitcoin-util": "^2.0.0",
-    "bitcoinjs-lib": "^2.2.0",
     "bn.js": "^4.11.8",
     "create-hash": "^1.2.0",
     "depcheck": "^0.6.9",
