--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Stores blockchain headers and verifies transactions with SPV",
   "main": "index.js",
   "scripts": {
-    "test": "depcheck --ignores=babel-preset-es2015,zuul,zuul-ngrok && standard src/*.js test/*.js && nyc tape test/*.js | faucet && nyc report",
+    "test": "depcheck --ignores=babel-preset-es2015 && standard src/*.js test/*.js && nyc tape test/*.js | faucet && nyc report",
     "test-browser": "npm run build && test/browser.sh && npm run source",
     "build": "rm -rf lib && babel --presets es2015 src -d lib",
     "source": "rm -rf lib && ln -s src lib",
@@ -29,15 +29,14 @@
     "old": "^0.2.0"
   },
   "devDependencies": {
+    "airtap": "^0.1.0",
     "babel-cli": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "faucet": "0.0.1",
     "nyc": "^13.0.1",
     "standard": "^7.0.0",
     "tape": "^4.9.1",
-    "webcoin-bitcoin": "^3.0.0",
-    "zuul": "^3.12.0",
-    "zuul-ngrok": "^4.0.0"
+    "webcoin-bitcoin": "^3.0.0"
   },
   "directories": {
     "test": "test"
