--- a/.travis.yml
+++ b/.travis.yml
@@ -22,3 +22,4 @@ addons:
   sauce_connect: true
   hosts:
   - airtap.local
+before_install: if [ -z "$BROWSER" ]; then unset SAUCE_USERNAME && unset SAUCE_ACCESS_KEY; fi
