Enabled html coverage output

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "pretest": "depcheck --ignores=babel-preset-es2015,airtap && standard src/*.js test/*.js",
-    "test": "npm run pretest && nyc tape test/*.js | faucet && nyc report",
+    "test": "npm run pretest && nyc -r text -r html tape test/*.js | faucet && nyc report",
     "test-browser": "npm run pretest && npm run build && test/browser.sh && npm run source",
     "build": "rm -rf lib && babel --presets es2015 src -d lib",
     "source": "rm -rf lib && ln -s src lib",
